--- a/pages/setting/editpassword/editpassword.wxss
+++ b/pages/setting/editpassword/editpassword.wxss
@@ -1,12 +1,3 @@
-.van-tabbar-item--active .van-tabbar-item__text {
-  color: #E3A33D;
-}
-
-.van-tabbar--fixed {
-  background-image: linear-gradient(0deg, #F6F6F6 0%, rgba(246, 246, 246, 0) 100%);
-  box-shadow: 0 -13px 27px 0 rgba(0, 0, 0, 0.05);
-}
-
 .van-nav-bar {
   background-color: #E3A33D !important;
   height: 100rpx;
@@ -37,35 +28,46 @@
 }
 
 .container {
-  background-color: #fff;
+  background: #fff;
 }
 
-.container .list-box {
+.container .form-box {
   width: 712rpx;
-  overflow: auto;
 }
 
-.container .list-box .list-item {
-  padding: 34rpx 0;
-  border-bottom: 2rpx solid #ddd;
-}
-
-.container .list-box .list-item .label {
-  font-family: PingFangSC-Regular;
+.container .form-box .label {
+  font-family: PingFangHK-Regular;
   font-size: 25rpx;
   color: #4A4A4A;
   letter-spacing: 0;
+  width: 100rpx;
+  margin-top: 16rpx;
+  margin-right: 25rpx;
 }
 
-.container .list-box .list-item .list-item-right .size {
-  font-family: PingFangSC-Regular;
+.container .form-box input {
+  padding: 32rpx 0 16rpx 0;
+  width: 588rpx;
+  border-bottom: 2rpx solid #EAEAEA;
+}
+
+.container .form-box .input-placeholder {
+  font-family: PingFangHK-Regular;
   font-size: 25rpx;
-  color: #CDCDCD;
+  color: #BBBBBB;
   letter-spacing: 0;
 }
 
-.container .list-box .list-item .list-item-right image {
-  width: 20rpx;
-  height: 30rpx;
-  margin-left: 12rpx;
+.container .bottom-btn {
+  background-image: linear-gradient(0deg, #D36221 0%, #F2AD3C 100%, #F7E7AC 100%);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 84rpx;
+  line-height: 84rpx;
+  color: #fff;
+  text-align: center;
+  font-family: PingFangSC-Regular;
+  font-size: 34rpx;
+  letter-spacing: 0;
 }
