--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!-- index.wxml -->
 <view class="container">
-    <view class="top-box" style="background:url('../../assets/images/Home page background.png');background-size:750rpx 306rpx">
+    <view class="top-box" style="background:url('../../assets/images/Home page background.png');background-size:750rpx 326rpx">
         <view class="top-avatar-box flexr0c">
             <image src="../../assets/images/user.png" />
             <view class="comname">渑池交易中心</view>
@@ -24,9 +24,9 @@
             <view class="out-num">-58000</view>
         </view>
     </view>
-    <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" scroll-top="0" scroll-left="0" scroll-into-view="" scroll-with-animation="false" enable-back-to-top="false" bindscrolltoupper="" bindscrolltolower="" bindscroll="" style="height:890rpx">
+    <scroll-view class="list-container" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" >
         <view class="list-box">
-            <view class="list-item-box flexrbc" wx:for="{{1}}" wx:key="index">
+            <view class="list-item-box flexrbc" bind:tap="toDetail" wx:for="{{list}}" wx:key="index">
                 <view class="check-type" hidden="{{0}}">未审核</view>
                 <view class="list-item-left">
                     <view class="flexr0c">
