--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -18,6 +18,7 @@
 .container .top-box {
   width: 100%;
   height: 306rpx;
+  overflow: auto;
 }
 
 .container .top-box image {
@@ -109,21 +110,27 @@
   background: rgba(187, 187, 187, 0.66);
 }
 
-.container .list-box {
-  width: 676rpx;
+.container .list-container {
+  margin-top: 18rpx;
+  height: 800rpx;
 }
 
-.container .list-box .list-item-box {
+.container .list-container .list-box {
+  width: 676rpx;
+  margin-left: 18rpx;
+}
+
+.container .list-container .list-box .list-item-box {
   width: 100%;
   background: #FFFFFF;
   box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
   border-radius: 6rpx;
-  margin: 18rpx 0 0 -20rpx;
   padding: 20rpx;
   position: relative;
+  margin-bottom: 16rpx;
 }
 
-.container .list-box .list-item-box .check-type {
+.container .list-container .list-box .list-item-box .check-type {
   width: 84rpx;
   height: 30rpx;
   background-color: #DC863A;
@@ -135,11 +142,11 @@
   top: 12rpx;
 }
 
-.container .list-box .list-item-box .list-item-left {
+.container .list-container .list-box .list-item-box .list-item-left {
   line-height: 40rpx;
 }
 
-.container .list-box .list-item-box .list-item-left .list-item-title {
+.container .list-container .list-box .list-item-box .list-item-left .list-item-title {
   font-family: PingFangSC-Regular;
   font-size: 25rpx;
   color: #A0A0A0;
@@ -148,20 +155,20 @@
   margin-right: 25rpx;
 }
 
-.container .list-box .list-item-box .list-item-left .list-item-content {
+.container .list-container .list-box .list-item-box .list-item-left .list-item-content {
   font-family: PingFangSC-Medium;
   font-size: 25rpx;
   color: #4A4A4A;
   letter-spacing: 0;
 }
 
-.container .list-box .list-item-box .list-item-left image {
+.container .list-container .list-box .list-item-box .list-item-left image {
   width: 28rpx;
   height: 28rpx;
   margin-right: 8rpx;
 }
 
-.container .list-box .list-item-box .list-item-right .list-item-num {
+.container .list-container .list-box .list-item-box .list-item-right .list-item-num {
   font-family: PingFangSC-Semibold;
   font-size: 34rpx;
   color: #E3A33D;
@@ -170,7 +177,7 @@
   font-weight: 500;
 }
 
-.container .list-box .list-item-box .list-item-right .list-item-num2 {
+.container .list-container .list-box .list-item-box .list-item-right .list-item-num2 {
   font-family: PingFangSC-Semibold;
   font-size: 34rpx;
   color: #206DE7;
@@ -179,12 +186,12 @@
   font-weight: 500;
 }
 
-.container .list-box .list-item-box .list-item-right image {
+.container .list-container .list-box .list-item-box .list-item-right image {
   width: 20rpx;
   height: 32rpx;
 }
 
-.container .list-box .list-item-box .list-item-right .in-type {
+.container .list-container .list-box .list-item-box .list-item-right .in-type {
   font-family: PingFangSC-Regular;
   font-size: 16rpx;
   color: #00B6AD;
