--- a/pages/inoutdetail/inoutdetail.wxml
+++ b/pages/inoutdetail/inoutdetail.wxml
@@ -4,47 +4,91 @@
     </van-nav-bar>
     <view class="top-select flexr0c">
         <view class="top-select-item-box flexrcc" bind:tap="selectIO" data-type="1">
-            <view class="top-select-item select-active">收支明细</view>
+            <view class="top-select-item {{IO==1?'select-active':''}}">收支明细</view>
         </view>
         <view class="top-select-item-box flexrcc" bind:tap="selectIO" data-type="2">
-            <view class="top-select-item">分析</view>
+            <view class="top-select-item {{IO==2?'select-active':''}}">分析</view>
         </view>
     </view>
-    <view class="middle-box flexr0c">
-        <view class="income-box flexrcc">
-            <view class="middle-label">收入</view>
-            <view class="income-num">+50000.00</view>
-        </view>
-        <view class="split-line"></view>
-        <view class="outcome-box flexrcc">
-            <view class="middle-label">支出</view>
-            <view class="outcome-num">-20000.00</view>
-        </view>
-    </view>
-    <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" scroll-top="0" scroll-left="0" scroll-into-view="" scroll-with-animation="false" enable-back-to-top="false" bindscrolltoupper="" bindscrolltolower="" bindscroll="" style="height:890rpx">
-        <view class="list-box">
-            <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index">
-                <view class="check-type" hidden="{{0}}">未审核</view>
-                <view class="list-item-left flexr">
-                    <image class="paytype" src="../../assets/images/WeChat.png" hidden="{{paytype!=1}}"></image>
-                    <image class="paytype" src="../../assets/images/Alipay.png" hidden="{{paytype!=2}}"></image>
-                    <image class="paytype" src="../../assets/images/zhuanzhanghuikuan.png" hidden="{{paytype!=3}}"></image>
-                    <view class="list-item-content-box">
-                        <view class="list-item-title">渑池豪瑞矿产品购销站</view>
-                        <view class="list-item-time">2020-08-22 14:23:34</view>
-                        <view class="list-item-address">支付宝|三门峡</view>
-                    </view>
-                </view>
-                <view class="list-item-right">
-                    <view class="flexr0c">
-                        <view class="{{inout==1?'list-item-num':'list-item-num'}}">+1258000</view>
-                        <image src="../../assets/images/The arrow.png" />
-                    </view>
-                    <view class="in-type">入账中</view>
-                </view>
+    <!-- 收支明细部分 -->
+    <view hidden="{{IO!=1}}" class="">
+        <view class="middle-box flexr0c">
+            <view class="income-box flexrcc">
+                <view class="middle-label">收入</view>
+                <view class="income-num">+50000.00</view>
+            </view>
+            <view class="split-line"></view>
+            <view class="outcome-box flexrcc">
+                <view class="middle-label">支出</view>
+                <view class="outcome-num">-20000.00</view>
             </view>
         </view>
-    </scroll-view>
+        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" scroll-top="0" scroll-left="0" scroll-into-view="" scroll-with-animation="false" enable-back-to-top="false" bindscrolltoupper="" bindscrolltolower="" bindscroll="" style="height:890rpx">
+            <view class="list-box">
+                <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index">
+                    <view class="check-type" hidden="{{0}}">未审核</view>
+                    <view class="list-item-left flexr">
+                        <image class="paytype" src="../../assets/images/WeChat.png" hidden="{{paytype!=1}}"></image>
+                        <image class="paytype" src="../../assets/images/Alipay.png" hidden="{{paytype!=2}}"></image>
+                        <image class="paytype" src="../../assets/images/zhuanzhanghuikuan.png" hidden="{{paytype!=3}}"></image>
+                        <view class="list-item-content-box">
+                            <view class="list-item-title">渑池豪瑞矿产品购销站</view>
+                            <view class="list-item-time">2020-08-22 14:23:34</view>
+                            <view class="list-item-address">支付宝|三门峡</view>
+                        </view>
+                    </view>
+                    <view class="list-item-right">
+                        <view class="flexr0c">
+                            <view class="{{inout==1?'list-item-num':'list-item-num'}}">
+                                +1258000
+                            </view>
+                            <image src="../../assets/images/The arrow.png" />
+                        </view>
+                        <view class="in-type">入账中</view>
+                    </view>
+                </view>
+            </view>
+        </scroll-view>
+    </view>
+    <!-- 分析部分 -->
+    <view hidden="{{IO!=2}}" class="flexc0c">
+        <view class="chartbar1-box">
+            <view class="chartbar1-top flexrcc">
+                <view class="previous">前一年</view>
+                <view class="thisyear">2020年</view>
+                <view class="next">后一年</view>
+            </view>
+            <view class="chartbar1-title flexr0c">
+                <view class="label-line"></view>
+                <view class="label-title">月度收支</view>
+                <view class="label-sub">单位（万元）</view>
+            </view>
+            <view class="chartbar1-box-item">
+                <ec-canvas id="mychart-dom-bar" canvas-id="mychart-bar" ec="{{ ecbar1 }}"></ec-canvas>
+            </view>
+        </view>
+        <view class="chartbar2-box flexc0c">
+            <view class="chartbar2-top flexc0c">
+                <view class="chartbar2-title">2020年08月1日---2020年08月31日</view>
+                <view class="inout-box flexr0c">
+                    <view class="income flexr0c">
+                        <view class="income-label">收入</view>
+                        <view class="income-num">+50000.00</view>
+                    </view>
+                    <view class="split-line2"></view>
+                    <view class="outcome flexr0c">
+                        <view class="outcome-label">支出</view>
+                        <view class="outcome-num">-20000.00</view>
+                    </view>
+                </view>
+            </view>
+            <view class="chartbar2-title flexr0c">
+                <view class="label-line"></view>
+                <view class="label-title">各市县出入金排名</view>
+            </view>
+        </view>
+    </view>
+    <!-- tabbar -->
     <van-tabbar active="{{ active }}" bind:change="changeTab">
         <van-tabbar-item>
             <image slot="icon" src="{{ icon.index }}" mode="aspectFit" style="width: 20px; height: 20px;" />
@@ -63,32 +107,33 @@
         </van-tabbar-item>
     </van-tabbar>
 </view>
+<!-- 抽屉弹出 -->
 <van-popup show="{{ show }}" position="right" custom-style="width: 76%;" bind:close="closeDraw">
     <view class="drawer">
         <view class="drawer-top-box">
             <view class="drawer-top">
                 <view class="drawer-top-label">企业名称</view>
-                <input type="text" placeholder="请输入您要查找的企业名称" placeholder-class="input-placeholder" />
+                <input type="text" bindinput="changeComName" placeholder="请输入您要查找的企业名称" placeholder-class="input-placeholder" />
                 <view class="drawer-top-label">交易单号</view>
-                <input type="text" placeholder="请输入您要查找的交易单号" placeholder-class="input-placeholder" />
+                <input type="text" bindinput="changeDealId" placeholder="请输入您要查找的交易单号" placeholder-class="input-placeholder" />
                 <view class="drawer-top-label">地区</view>
-                <input type="text" placeholder="请输入您要查找的地区" placeholder-class="input-placeholder" />
+                <input type="text" bindinput="changeLocation" placeholder="请输入您要查找的地区" placeholder-class="input-placeholder" />
             </view>
         </view>
         <view class="money-box">
             <view class="money-label">选择金额</view>
-            <view class="btn-box flexrbc">
-                <view class="btn-active">小于1万</view>
-                <view class="btn">1万-3万</view>
-                <view class="btn">3万-5万</view>
-                <view class="btn">5万-10万</view>
-                <view class="btn">大于10万</view>
-                <view class="btn">不限制</view>
+            <view class="btn-box flexrbc" bindtap="radio">
+                <view data-index="0" class="{{radio==0?'btn-active':'btn'}}">小于1万</view>
+                <view data-index="1" class="{{radio==1?'btn-active':'btn'}}">1万-3万</view>
+                <view data-index="2" class="{{radio==2?'btn-active':'btn'}}">3万-5万</view>
+                <view data-index="3" class="{{radio==3?'btn-active':'btn'}}">5万-10万</view>
+                <view data-index="4" class="{{radio==4?'btn-active':'btn'}}">大于10万</view>
+                <view data-index="5" class="{{radio==5?'btn-active':'btn'}}">不限制</view>
             </view>
             <view class="input-box flexrbc">
-                <input type="text" name="" id=""></input>
+                <input type="text" bindinput="changeMin" name="" id=""></input>
                 <view class="to-line"></view>
-                <input type="text"></input>
+                <input type="text" bindinput="changeMax"></input>
             </view>
         </view>
         <view class="paytype-box">
@@ -114,12 +159,8 @@
             </van-checkbox>
         </view>
         <view class="bottom-btn-box flexr0c">
-            <view class="bottom-btn-cancel" bind:tap="cancelBtn">
-                取消
-            </view>
-            <view class="bottom-btn-comfirm" bind:tap="comfirmBtn">
-                确定
-            </view>
+            <view class="bottom-btn-cancel" bind:tap="cancelBtn">取消</view>
+            <view class="bottom-btn-comfirm" bind:tap="comfirmBtn">确定</view>
         </view>
     </view>
 </van-popup>
