--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -16,7 +16,7 @@
     box-sizing: border-box;
     .top-box {
         width: 100%;
-        height: 306rpx;
+        // height: 306rpx;
         overflow: auto;
         image {
             width: 25rpx;
@@ -96,7 +96,7 @@
     }
     .list-container {
         margin-top: 18rpx;
-        height: 800rpx;
+        // height: 800rpx;
         .list-box {
             width: 676rpx;
             margin-left: 18rpx;
