--- a/pages/index/indexdetail/indexdetail.wxss
+++ b/pages/index/indexdetail/indexdetail.wxss
@@ -112,12 +112,14 @@
 .container .list-box {
   background-color: #fafafa;
   width: 716rpx;
+  height: 600rpx;
   margin-left: 17rpx;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .container .list-box .list-content-box {
-  width: 634rpx;
+  width: 636rpx;
   margin: 40rpx;
   position: relative;
 }
