--- a/pages/inoutdetail/inoutdetail.scss
+++ b/pages/inoutdetail/inoutdetail.scss
@@ -101,7 +101,7 @@
         }
     }
     .list-box {
-        background-color: #fff;
+        background-color: #fafafa;
         .list-item {
             width: 714rpx;
             padding-left: 18rpx;
@@ -176,109 +176,377 @@
             }
         }
     }
-    .chartbar1-box {
-        width: 716rpx;
-        height: 470rpx;
-        background: #fff;
-        box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
-        border-radius: 6rpx;
-        margin-top: 16rpx;
-        .chartbar1-top {
-            width: 642rpx;
-            height: 62rpx;
-            margin: 0 auto;
-            border-bottom: 2rpx solid #e9e9e9;
-            .previous,
-            .next {
-                font-family: PingFangSC-Semibold;
-                font-size: 20rpx;
-                color: #BBBBBB;
-                letter-spacing: 0;
-            }
-            .thisyear {
-                font-family: PingFangSC-Semibold;
-                font-size: 25rpx;
-                color: #E3A33D;
-                letter-spacing: 0;
-                font-weight: bold;
-                margin: 0 214rpx;
-            }
-        }
-        .chartbar1-title {
-            margin: 12rpx 0;
-            .label-line {
-                width: 4rpx;
-                height: 22rpx;
-                background-color: #E3A33D;
-                margin-left: 30rpx;
-                margin-right: 16rpx;
-            }
-            .label-title {
-                font-family: PingFangSC-Medium;
-                font-size: 25rpx;
-                color: #222222;
-                letter-spacing: 0;
-                margin-right: 12rpx;
-            }
-            .label-sub {
-                font-family: PingFangSC-Medium;
-                font-size: 25rpx;
-                color: #BBBBBB;
-                letter-spacing: 0;
-            }
-        }
-        .chartbar1-box-item {
-            width: 100%;
-            height: 342rpx;
-            border: 2rpx solid #000;
-        }
-    }
-    .chartbar2-box {
-        width: 716rpx;
-        height: 912rpx;
-        background: #fff;
-        box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
-        border-radius: 6rpx;
-        margin-top: 16rpx;
-        .chartbar2-top {
-            width: 640rpx;
-            border-bottom: 2rpx solid #E9E9E9;
-            .chartbar2-title {
-                font-family: PingFangSC-Medium;
-                font-size: 30rpx;
-                color: #E3A33D;
-                letter-spacing: 0;
-                margin: 20rpx 0;
-            }
-            .inout-box {
-                margin-bottom: 30rpx;
-                .split-line2 {
-                    width: 2rpx;
-                    height: 42rpx;
-                    background-color: #E9E9E9;
-                    margin: 0 56rpx;
+    .analysis-box {
+        margin-bottom: 100rpx;
+        overflow: auto;
+        margin-left: 34rpx;
+        .chartbar1-box {
+            width: 716rpx;
+            height: 470rpx;
+            background: #fff;
+            box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+            border-radius: 6rpx;
+            margin-top: 16rpx;
+            .chartbar1-top {
+                width: 642rpx;
+                height: 62rpx;
+                margin: 0 auto;
+                border-bottom: 2rpx solid #e9e9e9;
+                .previous,
+                .next {
+                    font-family: PingFangSC-Semibold;
+                    font-size: 20rpx;
+                    color: #BBBBBB;
+                    letter-spacing: 0;
+                    padding: 20rpx;
                 }
-                .income-label,
-                .outcome-label {
+                .previous {
+                    padding-left: 0;
+                }
+                .next {
+                    padding-right: 0;
+                }
+                .thisyear {
+                    font-family: PingFangSC-Semibold;
+                    font-size: 25rpx;
+                    color: #E3A33D;
+                    letter-spacing: 0;
+                    font-weight: bold;
+                    margin: 0 194rpx;
+                }
+            }
+            .chartbar1-title {
+                margin: 12rpx 0;
+                .label-line {
+                    width: 4rpx;
+                    height: 22rpx;
+                    background-color: #E3A33D;
+                    margin-left: 30rpx;
                     margin-right: 16rpx;
+                }
+                .label-title {
+                    font-family: PingFangSC-Medium;
+                    font-size: 25rpx;
+                    color: #222222;
+                    letter-spacing: 0;
+                    margin-right: 12rpx;
+                }
+                .label-sub {
                     font-family: PingFangSC-Medium;
                     font-size: 25rpx;
                     color: #BBBBBB;
                     letter-spacing: 0;
                 }
-                .income-num {
-                    font-family: PingFangSC-Semibold;
-                    font-size: 34rpx;
+            }
+            .chartbar1-box-item {
+                width: 100%;
+                height: 342rpx;
+                border: 2rpx solid #000;
+            }
+        }
+        .chartbar2-box {
+            width: 716rpx;
+            // height: 912rpx;
+            height: 100%;
+            background: #fff;
+            box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+            border-radius: 6rpx;
+            margin-top: 16rpx;
+            overflow: hidden;
+            .chartbar2-top {
+                width: 640rpx;
+                border-bottom: 2rpx solid #E9E9E9;
+                .chartbar2-title {
+                    font-family: PingFangSC-Medium;
+                    font-size: 30rpx;
                     color: #E3A33D;
                     letter-spacing: 0;
+                    margin: 20rpx 0;
+                    text-align: center;
                 }
-                .outcome-num {
-                    font-family: PingFangSC-Semibold;
-                    font-size: 34rpx;
-                    color: #206DE7;
+                .inout-box {
+                    margin-bottom: 30rpx;
+                    .split-line2 {
+                        width: 2rpx;
+                        height: 42rpx;
+                        background-color: #E9E9E9;
+                        margin: 0 56rpx;
+                    }
+                    .income-label,
+                    .outcome-label {
+                        margin-right: 16rpx;
+                        font-family: PingFangSC-Medium;
+                        font-size: 25rpx;
+                        color: #BBBBBB;
+                        letter-spacing: 0;
+                    }
+                    .income-num {
+                        font-family: PingFangSC-Semibold;
+                        font-size: 34rpx;
+                        color: #E3A33D;
+                        letter-spacing: 0;
+                    }
+                    .outcome-num {
+                        font-family: PingFangSC-Semibold;
+                        font-size: 34rpx;
+                        color: #206DE7;
+                        letter-spacing: 0;
+                    }
+                }
+            }
+            .chartbar2-title {
+                width: 100%;
+                .inout-label-box {
+                    margin: 12rpx 0 0 0;
+                    .label-line {
+                        width: 4rpx;
+                        height: 22rpx;
+                        background-color: #E3A33D;
+                        margin: 0 16rpx 0 30rpx;
+                    }
+                    .label-title {
+                        font-family: PingFangSC-Medium;
+                        font-size: 25rpx;
+                        color: #222222;
+                        letter-spacing: 0;
+                    }
+                }
+                .inout-btn {
+                    width: 140rpx;
+                    height: 32rpx;
+                    border: 1px solid #E3A33D;
+                    margin: 24rpx 32rpx 0 0;
+                    .income-btn,
+                    .outcome-btn {
+                        width: 70rpx;
+                        height: 32rpx;
+                        font-family: PingFangSC-Regular;
+                        font-size: 20rpx;
+                        color: #E3A33D;
+                        background: #fff;
+                        letter-spacing: 0;
+                        text-align: center;
+                        line-height: 32rpx;
+                    }
+                    .inout-active {
+                        background: #E3A33D;
+                        color: #fff;
+                    }
+                }
+            }
+            .chartbar2-container {
+                height: 500rpx;
+                width: 680rpx;
+                border: 1px solid #000;
+                margin-top: 20rpx;
+            }
+            .chartbar2-table {
+                width: 640rpx;
+                height: 100%;
+                border: 1px solid #E3A33D;
+                margin: 22rpx 0;
+                .table-title {
+                    background: rgba(227, 163, 61, 0.3);
+                    font-family: PingFangSC-Regular;
+                    font-size: 25rpx;
+                    color: #4A4A4A;
+                    letter-spacing: 0;
+                    .title-income {
+                        border-left: 1px solid #E3A33D;
+                        border-right: 1px solid #E3A33D;
+                    }
+                    & view {
+                        flex: 1;
+                        text-align: center;
+                        line-height: 42rpx;
+                    }
+                }
+                .table-item {
+                    font-family: PingFangSC-Regular;
+                    font-size: 25rpx;
+                    color: #4A4A4A;
+                    letter-spacing: 0;
+                    & view {
+                        flex: 1;
+                        text-align: center;
+                        line-height: 42rpx;
+                    }
+                    .table-income {
+                        border-left: 1px solid #E3A33D;
+                        border-right: 1px solid #E3A33D;
+                    }
+                    .table-backfff {
+                        background: #fff;
+                    }
+                    .table-backyellow {
+                        background: rgba(246, 227, 196, 0.25);
+                    }
+                }
+            }
+        }
+        .chartline-box {
+            background-color: #fff;
+            width: 716rpx;
+            margin-top: 16rpx;
+            overflow: hidden;
+            box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+            border-radius: 6rpx;
+            .chartline-top {
+                margin-top: 12rpx;
+                .label-line {
+                    width: 4rpx;
+                    height: 22rpx;
+                    background-color: #E3A33D;
+                    margin-left: 30rpx;
+                    margin-right: 16rpx;
+                }
+                .label-title {
+                    font-family: PingFangSC-Medium;
+                    font-size: 25rpx;
+                    color: #222222;
+                    letter-spacing: 0;
+                    margin-right: 12rpx;
+                }
+                .label-sub {
+                    font-family: PingFangSC-Medium;
+                    font-size: 25rpx;
+                    color: #BBBBBB;
                     letter-spacing: 0;
                 }
             }
+            .chartline-container {
+                width: 694rpx;
+                height: 416rpx;
+                border: 1px solid #000;
+                margin: 20rpx 0;
+            }
+        }
+        .chartpie-box {
+            background-color: #fff;
+            width: 716rpx;
+            margin-top: 16rpx;
+            overflow: hidden;
+            box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+            border-radius: 6rpx;
+            .chartpie-top {
+                margin-top: 12rpx;
+                .label-line {
+                    width: 4rpx;
+                    height: 22rpx;
+                    background-color: #E3A33D;
+                    margin-left: 30rpx;
+                    margin-right: 16rpx;
+                }
+                .label-title {
+                    font-family: PingFangSC-Medium;
+                    font-size: 25rpx;
+                    color: #222222;
+                    letter-spacing: 0;
+                    margin-right: 12rpx;
+                }
+            }
+            .chartpie-container {
+                width: 694rpx;
+                height: 556rpx;
+                border: 1px solid #000;
+                margin: 20rpx 0;
+            }
+        }
+        // 排名部分
+        .rankcompany,
+        .ranktoaddress {
+            width: 716rpx;
+            /* height: 460rpx; */
+            background-color: #fff;
+            margin-top: 16rpx;
+            box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+            border-radius: 6rpx;
+            overflow: hidden;
+        }
+        .chart-top-left {
+            margin: 12rpx 0;
+        }
+        .label-line {
+            width: 4rpx;
+            height: 22rpx;
+            background-color: #E3A33D;
+            margin-left: 30rpx;
+            margin-right: 16rpx;
+        }
+        .split-line {
+            color: #CECED3;
+            height: 72rpx;
+            width: 1rpx;
+            font-size: 50rpx;
+            margin: 0 52rpx;
+            transform: scaleX(0.5);
+        }
+        .chart-top-left-title {
+            font-family: PingFangSC-Medium;
+            font-size: 12px;
+            color: #4A4A4A;
+            letter-spacing: 0;
+            font-weight: bold;
+        }
+        .rank-tabel {
+            margin: 0 0 0 20rpx;
+            margin-left: 20rpx;
+        }
+        .rank-title {
+            font-family: PingFangSC-Regular;
+            font-size: 12px;
+            color: #4A4A4A;
+            letter-spacing: 0;
+            line-height: 50rpx;
+        }
+        .progress-bar {
+            width: 560rpx;
+            /* height: 30rpx; */
+            background: #F4F7FE;
+            border-radius: 16px;
+        }
+        .pro-iphonex {
+            height: 28rpx;
+        }
+        .pro-iphone {
+            height: 30rpx;
+        }
+        .pro-an {
+            height: 32rpx;
+        }
+        .progress {
+            background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAPCAYAAADd/14OAAAAZUlEQVQoU2M0Tnsn9+/f77kMDAwWDAwMJ5iYWJPPzhJ6xIAGGA1TXu5m+P/fBS7OyLjn/BxxV0yFyS9+MjAwsCFJ/Do/V4Idm8L/6ILn50owjioEhQCjYfIL6gcPkTFDbFwTm3oAwRNOEDbIR10AAAAASUVORK5CYII=);
+            /* height: 30rpx; */
+        }
+        .progress-dun {
+            background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAPCAYAAADd/14OAAAAZklEQVQoU2P8vkpL7t+fn3MZGRkt/v//f4KJhT2ZM+zaIwY0wPh1mfJuBgYGFyTxPdxRd10xFH5brvLz////bDAJRkbGX1yRd9ixmfgfXZA76i7jqEJQCIACnMrBQ0rMEBfXxKYeAPEZVhCpkd3VAAAAAElFTkSuQmCC);
+            /* height: 30rpx; */
+        }
+        .progress-num {
+            font-family: PingFangSC-Medium;
+            font-size: 12px;
+            color: #3163E8;
+            letter-spacing: 0;
+            margin-left: 20rpx;
+        }
+        .unfold,
+        .fold {
+            width: 100%;
+            padding-top: 20rpx;
+            padding-bottom: 20rpx;
+        }
+        .unfold-title,
+        .fold-title {
+            font-family: PingFangSC-Regular;
+            font-size: 12px;
+            color: #B6B7BE;
+            letter-spacing: 0;
+        }
+        .unfold image,
+        .fold image {
+            width: 32rpx;
+            height: 20rpx;
+            margin-left: 10rpx;
         }
     }
 }
