--- a/pages/inoutdetail/inoutdetail.wxml
+++ b/pages/inoutdetail/inoutdetail.wxml
@@ -1,4 +1,4 @@
-<view class="container">
+<view class="container flexc0c">
     <van-nav-bar title="收支明细">
         <image class="filter" src="../../assets/images/screening.png" bindtap="filter" slot="left"></image>
     </van-nav-bar>
@@ -23,7 +23,7 @@
                 <view class="outcome-num">-20000.00</view>
             </view>
         </view>
-        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" scroll-top="0" scroll-left="0" scroll-into-view="" scroll-with-animation="false" enable-back-to-top="false" bindscrolltoupper="" bindscrolltolower="" bindscroll="" style="height:890rpx">
+        <scroll-view class="" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50"  style="height:{{(screenHeight-hair-200)*2}}rpx">
             <view class="list-box">
                 <view class="list-item flexrbc" wx:for="{{list}}" wx:key="index">
                     <view class="check-type" hidden="{{0}}">未审核</view>
@@ -51,12 +51,12 @@
         </scroll-view>
     </view>
     <!-- 分析部分 -->
-    <view hidden="{{IO!=2}}" class="flexc0c">
+    <scroll-view class="list-container" scroll-x="false" scroll-y="true" upper-threshold="50" lower-threshold="50" style="height:{{(screenHeight-150-hair)*2}}rpx" hidden="{{IO!=2}}" class="flexc0c analysis-box">
         <view class="chartbar1-box">
             <view class="chartbar1-top flexrcc">
-                <view class="previous">前一年</view>
-                <view class="thisyear">2020年</view>
-                <view class="next">后一年</view>
+                <view class="previous" bind:tap="previous">前一年</view>
+                <view class="thisyear">{{thisyear}}年</view>
+                <view class="next" bind:tap="next">后一年</view>
             </view>
             <view class="chartbar1-title flexr0c">
                 <view class="label-line"></view>
@@ -82,12 +82,89 @@
                     </view>
                 </view>
             </view>
-            <view class="chartbar2-title flexr0c">
-                <view class="label-line"></view>
-                <view class="label-title">各市县出入金排名</view>
+            <view class="chartbar2-title flexrb">
+                <view class="inout-label-box flexr0c">
+                    <view class="label-line"></view>
+                    <view class="label-title">各市县出入金排名</view>
+                </view>
+                <view class="inout-btn flexr0c">
+                    <view bindtap="income" class="income-btn {{inoutBtn=='in'?'inout-active':''}}">
+                        入金
+                    </view>
+                    <view bindtap="outcome" class="outcome-btn {{inoutBtn=='out'?'inout-active':''}}">
+                        出金
+                    </view>
+                </view>
+            </view>
+            <view class="chartbar2-container">
+                <ec-canvas id="mychart-dom-bar" canvas-id="mychart-bar" ec="{{ ecbar2 }}"></ec-canvas>
+            </view>
+            <view class="chartbar2-table">
+                <view class="table-title flexr0c">
+                    <view class="title-address">市县</view>
+                    <view class="title-income">月度入金</view>
+                    <view class="title-outcome">月度出金</view>
+                </view>
+                <view class="table-item flexr0c" wx:for="{{table}}" wx:key="index">
+                    <view class="{{index%2==0?'table-backfff':'table-backyellow'}}">
+                        {{item.add}}
+                    </view>
+                    <view class="{{index%2==0?'table-backfff':'table-backyellow'}} table-income">
+                        {{item.in}}
+                    </view>
+                    <view class="{{index%2==0?'table-backfff':'table-backyellow'}}">
+                        {{item.out}}
+                    </view>
+                </view>
             </view>
         </view>
-    </view>
+        <view class="chartline-box">
+            <view class="chartline-top flexr0c">
+                <view class="label-line"></view>
+                <view class="label-title">每日缴款</view>
+                <view class="label-sub">单位（万元）</view>
+            </view>
+            <view class="chartline-container">
+                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ecline}}"></ec-canvas>
+            </view>
+        </view>
+        <view class="chartpie-box">
+            <view class="chartpie-top flexr0c">
+                <view class="label-line"></view>
+                <view class="label-title">交易类型占比</view>
+            </view>
+            <view class="chartpie-container">
+                <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ ecpie }}"></ec-canvas>
+            </view>
+        </view>
+        <view class="rankcompany">
+            <view class="chart-top-left flexr0c">
+                <view class="label-line"></view>
+                <view class="chart-top-left-title">企业缴纳排名（前十）</view>
+            </view>
+            <view class="rank-tabel">
+                <view class="rank-tabel-item" wx:for="{{needfold?needcarshort:needcarlong}}" wx:key="index">
+                    <view class="rank-title">
+                        {{item.ENTERPRISE_NAME?item.ENTERPRISE_NAME:'(空)'}}
+                    </view>
+                    <view class="flexr0c">
+                        <view class="progress-bar {{brand=='an'?'pro-an':''}} {{brand=='iphone'?'pro-iphone':''}} {{brand=='iphonex'?'pro-iphonex':''}}">
+                            <view class="progress {{brand=='an'?'pro-an':''}} {{brand=='iphone'?'pro-iphone':''}} {{brand=='iphonex'?'pro-iphonex':''}}" style="width:{{item.COUNT/needcarshort[0].COUNT*560}}rpx;color:#F5A623;"></view>
+                        </view>
+                        <view class="progress-num">{{item.COUNT}}</view>
+                    </view>
+                </view>
+            </view>
+            <view class="unfold flexrcc" bindtap="fold" data-type="needunfold" hidden="{{!needfold}}">
+                <view class="unfold-title">展开</view>
+                <image src="../../assets/images/10openarrow.png"></image>
+            </view>
+            <view class="fold flexrcc" bindtap="fold" data-type="needfold" hidden="{{needfold}}">
+                <view class="fold-title">收起</view>
+                <image src="../../assets/images/11closearrow.png"></image>
+            </view>
+        </view>
+    </scroll-view>
     <!-- tabbar -->
     <van-tabbar active="{{ active }}" bind:change="changeTab">
         <van-tabbar-item>
