--- a/pages/inoutdetail/inoutdetail.wxss
+++ b/pages/inoutdetail/inoutdetail.wxss
@@ -112,7 +112,7 @@
 }
 
 .container .list-box {
-  background-color: #fff;
+  background-color: #fafafa;
 }
 
 .container .list-box .list-item {
@@ -191,7 +191,13 @@
   margin-right: 36rpx;
 }
 
-.container .chartbar1-box {
+.container .analysis-box {
+  margin-bottom: 100rpx;
+  overflow: auto;
+  margin-left: 34rpx;
+}
+
+.container .analysis-box .chartbar1-box {
   width: 716rpx;
   height: 470rpx;
   background: #fff;
@@ -200,35 +206,44 @@
   margin-top: 16rpx;
 }
 
-.container .chartbar1-box .chartbar1-top {
+.container .analysis-box .chartbar1-box .chartbar1-top {
   width: 642rpx;
   height: 62rpx;
   margin: 0 auto;
   border-bottom: 2rpx solid #e9e9e9;
 }
 
-.container .chartbar1-box .chartbar1-top .previous,
-.container .chartbar1-box .chartbar1-top .next {
+.container .analysis-box .chartbar1-box .chartbar1-top .previous,
+.container .analysis-box .chartbar1-box .chartbar1-top .next {
   font-family: PingFangSC-Semibold;
   font-size: 20rpx;
   color: #BBBBBB;
   letter-spacing: 0;
+  padding: 20rpx;
 }
 
-.container .chartbar1-box .chartbar1-top .thisyear {
+.container .analysis-box .chartbar1-box .chartbar1-top .previous {
+  padding-left: 0;
+}
+
+.container .analysis-box .chartbar1-box .chartbar1-top .next {
+  padding-right: 0;
+}
+
+.container .analysis-box .chartbar1-box .chartbar1-top .thisyear {
   font-family: PingFangSC-Semibold;
   font-size: 25rpx;
   color: #E3A33D;
   letter-spacing: 0;
   font-weight: bold;
-  margin: 0 214rpx;
+  margin: 0 194rpx;
 }
 
-.container .chartbar1-box .chartbar1-title {
+.container .analysis-box .chartbar1-box .chartbar1-title {
   margin: 12rpx 0;
 }
 
-.container .chartbar1-box .chartbar1-title .label-line {
+.container .analysis-box .chartbar1-box .chartbar1-title .label-line {
   width: 4rpx;
   height: 22rpx;
   background-color: #E3A33D;
@@ -236,7 +251,7 @@
   margin-right: 16rpx;
 }
 
-.container .chartbar1-box .chartbar1-title .label-title {
+.container .analysis-box .chartbar1-box .chartbar1-title .label-title {
   font-family: PingFangSC-Medium;
   font-size: 25rpx;
   color: #222222;
@@ -244,54 +259,56 @@
   margin-right: 12rpx;
 }
 
-.container .chartbar1-box .chartbar1-title .label-sub {
+.container .analysis-box .chartbar1-box .chartbar1-title .label-sub {
   font-family: PingFangSC-Medium;
   font-size: 25rpx;
   color: #BBBBBB;
   letter-spacing: 0;
 }
 
-.container .chartbar1-box .chartbar1-box-item {
+.container .analysis-box .chartbar1-box .chartbar1-box-item {
   width: 100%;
   height: 342rpx;
   border: 2rpx solid #000;
 }
 
-.container .chartbar2-box {
+.container .analysis-box .chartbar2-box {
   width: 716rpx;
-  height: 912rpx;
+  height: 100%;
   background: #fff;
   box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
   border-radius: 6rpx;
   margin-top: 16rpx;
+  overflow: hidden;
 }
 
-.container .chartbar2-box .chartbar2-top {
+.container .analysis-box .chartbar2-box .chartbar2-top {
   width: 640rpx;
   border-bottom: 2rpx solid #E9E9E9;
 }
 
-.container .chartbar2-box .chartbar2-top .chartbar2-title {
+.container .analysis-box .chartbar2-box .chartbar2-top .chartbar2-title {
   font-family: PingFangSC-Medium;
   font-size: 30rpx;
   color: #E3A33D;
   letter-spacing: 0;
   margin: 20rpx 0;
+  text-align: center;
 }
 
-.container .chartbar2-box .chartbar2-top .inout-box {
+.container .analysis-box .chartbar2-box .chartbar2-top .inout-box {
   margin-bottom: 30rpx;
 }
 
-.container .chartbar2-box .chartbar2-top .inout-box .split-line2 {
+.container .analysis-box .chartbar2-box .chartbar2-top .inout-box .split-line2 {
   width: 2rpx;
   height: 42rpx;
   background-color: #E9E9E9;
   margin: 0 56rpx;
 }
 
-.container .chartbar2-box .chartbar2-top .inout-box .income-label,
-.container .chartbar2-box .chartbar2-top .inout-box .outcome-label {
+.container .analysis-box .chartbar2-box .chartbar2-top .inout-box .income-label,
+.container .analysis-box .chartbar2-box .chartbar2-top .inout-box .outcome-label {
   margin-right: 16rpx;
   font-family: PingFangSC-Medium;
   font-size: 25rpx;
@@ -299,18 +316,315 @@
   letter-spacing: 0;
 }
 
-.container .chartbar2-box .chartbar2-top .inout-box .income-num {
+.container .analysis-box .chartbar2-box .chartbar2-top .inout-box .income-num {
   font-family: PingFangSC-Semibold;
   font-size: 34rpx;
   color: #E3A33D;
   letter-spacing: 0;
 }
 
-.container .chartbar2-box .chartbar2-top .inout-box .outcome-num {
+.container .analysis-box .chartbar2-box .chartbar2-top .inout-box .outcome-num {
   font-family: PingFangSC-Semibold;
   font-size: 34rpx;
   color: #206DE7;
   letter-spacing: 0;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-title {
+  width: 100%;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-title .inout-label-box {
+  margin: 12rpx 0 0 0;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-title .inout-label-box .label-line {
+  width: 4rpx;
+  height: 22rpx;
+  background-color: #E3A33D;
+  margin: 0 16rpx 0 30rpx;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-title .inout-label-box .label-title {
+  font-family: PingFangSC-Medium;
+  font-size: 25rpx;
+  color: #222222;
+  letter-spacing: 0;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-title .inout-btn {
+  width: 140rpx;
+  height: 32rpx;
+  border: 1px solid #E3A33D;
+  margin: 24rpx 32rpx 0 0;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-title .inout-btn .income-btn,
+.container .analysis-box .chartbar2-box .chartbar2-title .inout-btn .outcome-btn {
+  width: 70rpx;
+  height: 32rpx;
+  font-family: PingFangSC-Regular;
+  font-size: 20rpx;
+  color: #E3A33D;
+  background: #fff;
+  letter-spacing: 0;
+  text-align: center;
+  line-height: 32rpx;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-title .inout-btn .inout-active {
+  background: #E3A33D;
+  color: #fff;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-container {
+  height: 500rpx;
+  width: 680rpx;
+  border: 1px solid #000;
+  margin-top: 20rpx;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table {
+  width: 640rpx;
+  height: 100%;
+  border: 1px solid #E3A33D;
+  margin: 22rpx 0;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-title {
+  background: rgba(227, 163, 61, 0.3);
+  font-family: PingFangSC-Regular;
+  font-size: 25rpx;
+  color: #4A4A4A;
+  letter-spacing: 0;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-title .title-income {
+  border-left: 1px solid #E3A33D;
+  border-right: 1px solid #E3A33D;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-title view {
+  flex: 1;
+  text-align: center;
+  line-height: 42rpx;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-item {
+  font-family: PingFangSC-Regular;
+  font-size: 25rpx;
+  color: #4A4A4A;
+  letter-spacing: 0;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-item view {
+  flex: 1;
+  text-align: center;
+  line-height: 42rpx;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-item .table-income {
+  border-left: 1px solid #E3A33D;
+  border-right: 1px solid #E3A33D;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-item .table-backfff {
+  background: #fff;
+}
+
+.container .analysis-box .chartbar2-box .chartbar2-table .table-item .table-backyellow {
+  background: rgba(246, 227, 196, 0.25);
+}
+
+.container .analysis-box .chartline-box {
+  background-color: #fff;
+  width: 716rpx;
+  margin-top: 16rpx;
+  overflow: hidden;
+  box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+  border-radius: 6rpx;
+}
+
+.container .analysis-box .chartline-box .chartline-top {
+  margin-top: 12rpx;
+}
+
+.container .analysis-box .chartline-box .chartline-top .label-line {
+  width: 4rpx;
+  height: 22rpx;
+  background-color: #E3A33D;
+  margin-left: 30rpx;
+  margin-right: 16rpx;
+}
+
+.container .analysis-box .chartline-box .chartline-top .label-title {
+  font-family: PingFangSC-Medium;
+  font-size: 25rpx;
+  color: #222222;
+  letter-spacing: 0;
+  margin-right: 12rpx;
+}
+
+.container .analysis-box .chartline-box .chartline-top .label-sub {
+  font-family: PingFangSC-Medium;
+  font-size: 25rpx;
+  color: #BBBBBB;
+  letter-spacing: 0;
+}
+
+.container .analysis-box .chartline-box .chartline-container {
+  width: 694rpx;
+  height: 416rpx;
+  border: 1px solid #000;
+  margin: 20rpx 0;
+}
+
+.container .analysis-box .chartpie-box {
+  background-color: #fff;
+  width: 716rpx;
+  margin-top: 16rpx;
+  overflow: hidden;
+  box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+  border-radius: 6rpx;
+}
+
+.container .analysis-box .chartpie-box .chartpie-top {
+  margin-top: 12rpx;
+}
+
+.container .analysis-box .chartpie-box .chartpie-top .label-line {
+  width: 4rpx;
+  height: 22rpx;
+  background-color: #E3A33D;
+  margin-left: 30rpx;
+  margin-right: 16rpx;
+}
+
+.container .analysis-box .chartpie-box .chartpie-top .label-title {
+  font-family: PingFangSC-Medium;
+  font-size: 25rpx;
+  color: #222222;
+  letter-spacing: 0;
+  margin-right: 12rpx;
+}
+
+.container .analysis-box .chartpie-box .chartpie-container {
+  width: 694rpx;
+  height: 556rpx;
+  border: 1px solid #000;
+  margin: 20rpx 0;
+}
+
+.container .analysis-box .rankcompany,
+.container .analysis-box .ranktoaddress {
+  width: 716rpx;
+  /* height: 460rpx; */
+  background-color: #fff;
+  margin-top: 16rpx;
+  box-shadow: 0 5rpx 15rpx 0 rgba(0, 0, 0, 0.05);
+  border-radius: 6rpx;
+  overflow: hidden;
+}
+
+.container .analysis-box .chart-top-left {
+  margin: 12rpx 0;
+}
+
+.container .analysis-box .label-line {
+  width: 4rpx;
+  height: 22rpx;
+  background-color: #E3A33D;
+  margin-left: 30rpx;
+  margin-right: 16rpx;
+}
+
+.container .analysis-box .split-line {
+  color: #CECED3;
+  height: 72rpx;
+  width: 1rpx;
+  font-size: 50rpx;
+  margin: 0 52rpx;
+  transform: scaleX(0.5);
+}
+
+.container .analysis-box .chart-top-left-title {
+  font-family: PingFangSC-Medium;
+  font-size: 12px;
+  color: #4A4A4A;
+  letter-spacing: 0;
+  font-weight: bold;
+}
+
+.container .analysis-box .rank-tabel {
+  margin: 0 0 0 20rpx;
+  margin-left: 20rpx;
+}
+
+.container .analysis-box .rank-title {
+  font-family: PingFangSC-Regular;
+  font-size: 12px;
+  color: #4A4A4A;
+  letter-spacing: 0;
+  line-height: 50rpx;
+}
+
+.container .analysis-box .progress-bar {
+  width: 560rpx;
+  /* height: 30rpx; */
+  background: #F4F7FE;
+  border-radius: 16px;
+}
+
+.container .analysis-box .pro-iphonex {
+  height: 28rpx;
+}
+
+.container .analysis-box .pro-iphone {
+  height: 30rpx;
+}
+
+.container .analysis-box .pro-an {
+  height: 32rpx;
+}
+
+.container .analysis-box .progress {
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAPCAYAAADd/14OAAAAZUlEQVQoU2M0Tnsn9+/f77kMDAwWDAwMJ5iYWJPPzhJ6xIAGGA1TXu5m+P/fBS7OyLjn/BxxV0yFyS9+MjAwsCFJ/Do/V4Idm8L/6ILn50owjioEhQCjYfIL6gcPkTFDbFwTm3oAwRNOEDbIR10AAAAASUVORK5CYII=);
+  /* height: 30rpx; */
+}
+
+.container .analysis-box .progress-dun {
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAPCAYAAADd/14OAAAAZklEQVQoU2P8vkpL7t+fn3MZGRkt/v//f4KJhT2ZM+zaIwY0wPh1mfJuBgYGFyTxPdxRd10xFH5brvLz////bDAJRkbGX1yRd9ixmfgfXZA76i7jqEJQCIACnMrBQ0rMEBfXxKYeAPEZVhCpkd3VAAAAAElFTkSuQmCC);
+  /* height: 30rpx; */
+}
+
+.container .analysis-box .progress-num {
+  font-family: PingFangSC-Medium;
+  font-size: 12px;
+  color: #3163E8;
+  letter-spacing: 0;
+  margin-left: 20rpx;
+}
+
+.container .analysis-box .unfold,
+.container .analysis-box .fold {
+  width: 100%;
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+}
+
+.container .analysis-box .unfold-title,
+.container .analysis-box .fold-title {
+  font-family: PingFangSC-Regular;
+  font-size: 12px;
+  color: #B6B7BE;
+  letter-spacing: 0;
+}
+
+.container .analysis-box .unfold image,
+.container .analysis-box .fold image {
+  width: 32rpx;
+  height: 20rpx;
+  margin-left: 10rpx;
 }
 
 .drawer {
